# ie

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  shell.nix
src/: CMakeLists.txt
src/convert/: CMakeLists.txt  convert.py  model.py
src/mnist/: CMakeLists.txt  mnist.cpp
src/parser/: CMakeLists.txt  open.cpp
src/proto/: CMakeLists.txt  onnx-ml.proto
